updated logic for getting elevforhold